--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@ OPENAI_API_KEY=your_openai_api_key_here
 NGROK_AUTH_TOKEN=your_ngrok_auth_token_here
 
 # Gemini AI Configuration (optional - for image generation)
-GEMINI_API_KEY=AIzaSyBSGMmdkn-_WVywlBQeUipcvhlbd_d7ULw
+GEMINI_API_KEY=gemini_api_key
 
 # API Authentication (optional)
 API_KEY=your_api_key_here
 REQUIRE_API_KEY=false
 
 # Google Cloud Configuration (optional)
-GOOGLE_CLOUD_PROJECT=gen-lang-client-0148980288
-GOOGLE_CLOUD_BUCKET=gen-lang-client-0148980288-ai-expo-builder-archives
-GOOGLE_APPLICATION_CREDENTIALS=backend\service-account-key.json
+GOOGLE_CLOUD_PROJECT=your_project_id
+GOOGLE_CLOUD_BUCKET=
+GOOGLE_APPLICATION_CREDENTIALS=
 
 # Application Settings
 MAX_CONCURRENT_PROJECTS=10
