--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ uvicorn[standard]==0.27.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
 
-# OpenAI integration
+# AI integrations
 openai>=1.30.0
+google-generativeai>=0.3.0  # Gemini fallback for OpenAI quota
 
 # Tunnel management
 pyngrok==7.0.5
