--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ psutil==5.9.8
 # Utilities
 python-dotenv==1.0.0
 aiofiles==23.2.1
+PyJWT==2.8.0
 
 # Google Cloud (optional)
 google-cloud-storage==2.14.0
