--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,36 @@
-# OpenAI Configuration
+# OpenAI API Key (required)
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Ngrok Configuration
-NGROK_AUTH_TOKEN=your_ngrok_auth_token_here
+# Ngrok Authentication Token (required)
+NGROK_AUTH_TOKEN=your_ngrok_authtoken_here
 
-# Gemini AI Configuration (optional - for image generation)
-GEMINI_API_KEY=AIzaSyBSGMmdkn-_WVywlBQeUipcvhlbd_d7ULw
+# Google Gemini API Key (optional - fallback when OpenAI quota exceeded)
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # API Authentication (optional)
 API_KEY=your_api_key_here
 REQUIRE_API_KEY=false
 
-# Google Cloud Configuration (optional)
-GOOGLE_CLOUD_PROJECT=gen-lang-client-0148980288
-GOOGLE_CLOUD_BUCKET=gen-lang-client-0148980288-ai-expo-builder-archives
-GOOGLE_APPLICATION_CREDENTIALS=backend\service-account-key.json
+# Google Cloud Configuration (required for production)
+GOOGLE_CLOUD_PROJECT=your_google_cloud_project_id
+GOOGLE_CLOUD_BUCKET=your_google_cloud_bucket_name
+GOOGLE_APPLICATION_CREDENTIALS=path/to/google-cloud-credentials.json
 
-# Application Settings
+# Firebase Authentication (required for Firebase auth)
+# Path to Firebase Admin SDK credentials JSON file
+# You can get this from Firebase Console -> Project Settings -> Service Accounts -> Generate new private key
+FIREBASE_CREDENTIALS_PATH=path/to/firebase-credentials.json
+
+# Application Settings (optional - defaults shown)
 MAX_CONCURRENT_PROJECTS=10
 PROJECT_TIMEOUT_MINUTES=30
 BASE_PORT=19006
 CODE_GENERATION_TIMEOUT=900
-PROJECTS_BASE_DIR=./projects
 
-# Resource Limits (percentage thresholds)
+# Resource Limits (optional - defaults shown)
 MAX_CPU_PERCENT=90.0
 MAX_MEMORY_PERCENT=95.0
 MIN_DISK_PERCENT=5.0
+
+# Paths (optional - defaults shown)
+PROJECTS_BASE_DIR=/tmp/projects
