--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ psutil==5.9.8
 python-dotenv==1.0.0
 aiofiles==23.2.1
 PyJWT==2.8.0
+httpx>=0.25.0  # For Firebase REST API calls
 
 # Google Cloud (optional)
 google-cloud-storage==2.14.0
